--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status": "^1.7.0",
     "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "logger": "^0.0.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
