--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status": "^1.7.0",
+    "ioredis": "^5.3.2",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "logger": "^0.0.1",
